src/3rdparty/javascriptcore/JavaScriptCore/runtime/Collector.cpp
@@ -1151,11 +1151,6 @@ void Heap::markRoots()
     // Mark explicitly registered roots.
     markProtectedObjects(markStack);
 
-#if QT_BUILD_SCRIPT_LIB
-    if (m_globalData->clientData)
-        m_globalData->clientData->mark(markStack);
-#endif
-
     // Mark misc. other roots.
     if (m_markListSet && m_markListSet->size())
         MarkedArgumentBuffer::markLists(markStack, *m_markListSet);
@@ -1166,6 +1161,11 @@ void Heap::markRoots()
         m_globalData->functionCodeBlockBeingReparsed->markAggregate(markStack);
     if (m_globalData->firstStringifierToMark)
         JSONObject::markStringifiers(markStack, m_globalData->firstStringifierToMark);
+
+#if QT_BUILD_SCRIPT_LIB
+    if (m_globalData->clientData)
+        m_globalData->clientData->mark(markStack);
+#endif
 
     markStack.drain();
     markStack.compact();
